@@ -14,13 +14,14 @@
 - Server can accept traps and syslog messages from nodes in all zones (controlled by TrapSourcesInAllZones configuration option)
 - On instance discovery pool instance name is updated if it has changed
 - New SMS driver - slack.com
+- IPv6 support in built-in syslog server
 - Management console:
 	- Object context menu available on geo map
 	- Filter in event template configurator
 	- Web console use client time zone to display time
 	- Added option to use server time zone to display time in console
 	- Access to event log, SNMP trap log, and syslog from object context menu
-- Fixed issues: #786, #831, #841, #852, #864, #890, #892, #896, #897, #898, #900, #902, #905, #913, #917, #919, #921, #928, #933
+- Fixed issues: #786, #831, #841, #852, #864, #890, #892, #896, #897, #898, #900, #902, #903, #905, #913, #917, #919, #921, #928, #933
 
 
 *
